assets/css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: content-box;
    background: #000000;
    color: #fff;
}

.game {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    justify-content: center;
    align-items: center;
}

h1,
h3 {
    top: 0;
    font-size: 3rem;
    z-index: 2;
    text-align: center;
    border-bottom: 2px solid white;
}

.score {
    display: flex;
    width: 30vw;
    justify-content: space-evenly;
    position: absolute;
    top: 70px;
    z-index: 1;
}

.p-count,
.c-count {
    text-align: center;
    font-size: 1.5rem;
    margin-top: 1rem;
}

.options {
    display: flex;
    width: 50vw;
    justify-content: space-evenly;
    margin-top: 2rem;
}


.rock:hover {
    transform: scale(1.5);
}

.scissor:hover {
    transform: scale(1.5);
}

.paper:hover {
    transform: scale(1.5);
}

.rock,
.paper,
.scissor {
    padding: 0.8rem;
    width: 100px;
    height: 100px;
    border-radius: 50%;
    background: rgb(255, 255, 255);
    outline: none;
    border-color: rgb(0, 0, 0);
    border: 2px solid black;
    cursor: pointer;
    color: rgba(0, 0, 0, 0);
    font-size: 0rem;
}

.rock {
    background: url(/images/rock_image2.png) no-repeat center center;
    cursor: pointer;
    width: 70px;
    height: 70px;
}

.paper {
    background: url(/images/paper_image2.png) center;
    width: 70px;
    height: 70px;
}

.scissor {
    background: url(./images/scissors_image2.png) no-repeat center center;
    width: 70px;
    height: 70px;
}

.move {
    font-size: 2rem;
    font-weight: bold;
}

.reload {
    display: none;
    margin-top: 2rem;
    padding: 1rem;
    background: green;
    outline: none;
    border: none;
    border-radius: 10px;
    cursor: pointer;
}


.result {
    margin-top: 40px;
    font-size: 1.2rem;
}

@media screen and (max-width: 612px) {
    .title {
        text-align: center;
    }

    .score {
        border: 2px solid white;
        position: initial;
        top: 200px;
        width: 100vw;
    }

    .options {
        width: 100vw;
    }
}

